Updated selectors to fix info tour and editor overflow scroll bar

--- a/src/app/viewer/main-viewer/main-viewer.component.scss
+++ b/src/app/viewer/main-viewer/main-viewer.component.scss
@@ -16,7 +16,7 @@ $icon-size: 24px;
   height: 100%;
 }
 
-#split-left, #split-terminal {
+#terminal-area, #editor-area {
   overflow-y: hidden;
 }
 
